#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([record], [1.0.0], [abcx_x@163.com])
AC_CONFIG_SRCDIR([src/record.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([1.0 subdir-objects -Wall -Werror])

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
